Corrects width of restaurant li on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -269,6 +269,7 @@ select:focus {
   padding: 25px 30px;
   text-align: left;
   /* width: 270px; */
+  width: calc(100% - 60px)
   min-width: 150px;
   max-width: 300px;
 }
